# Wuyuanyuan-169-NanJin

169_instrument/: .gitignore  .project  CMakeLists.txt  C_Layout.hwl  Makefile  P&E_Multilink_USB.ini  Project_1.G_C  Project_1.iPE  Project_1.mcp  Project_1_0.iPE  Project_1_1.iPE  Project_1_2.iPE  Project_1_3.iPE  Project_1_4.iPE  README.md  TBDML.ini
169_instrument/Sources/: MCUinit.c  MCUinit.h  datapage.c  fault_page.c  fault_page.h  include.h  main.c  main.h  panel.c  panel.h  stepper.c  stepper.h
169_instrument/Sources/User/: GB1616.h  SPI25LC1024.c  SPI25LC1024.h  app_flash.c  app_flash.h  bmp.c  bmp.h  chinese.h  config.h  delay.c  delay.h  fault.c  fault.h  font16x8.h  global.c  global.h  key.c  key.h  str.c  str.h  systermf.c  systermf.h  typedef.h
169_instrument/Sources/can/: can.c  can.h  can_msg_handle.c  can_msg_handle.h
169_instrument/Sources/font/: show_string.c  show_string.h  show_zh_24.c  show_zh_24.h  zh_24x24.c  zh_font.c
169_instrument/Sources/gui/: ILI9481.c  ILI9481.h  air_page.c  air_page.h  auxiliary_page.c  auxiliary_page.h  batteryManager_page.c  batteryManager_page.h  control_page.c  control_page.h  debug_page.c  debug_page.h  gui.c  gui.h  main_page.c  main_page.h  menu_page.c  menu_page.h  show.c  show.h  warning.c  warning.h
169_instrument/prm/: Project.prm
169_instrument/tools/: MakeFontNote.bat  make_font_16.ini  make_font_24.ini
169_instrument/协议资料/: ZY03-10-2136011.1-电动车仪表（南京金龙特种汽车）.dwg  ~$金龙接口定义V1.0.docx  南京金龙接口定义V1.0.docx  接口定义V1.0 - 修改.docx
169sourceInsightProject/: nanjingjinlong.IAB  nanjingjinlong.IAD  nanjingjinlong.IMB  nanjingjinlong.IMD  nanjingjinlong.PFI  nanjingjinlong.PO  nanjingjinlong.PR  nanjingjinlong.PRI  nanjingjinlong.PS  nanjingjinlong.SearchResults  nanjingjinlong.WK3
