cmake_minimum_required(VERSION 3.8)
project(bingo)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        Sources/can/can.c
        Sources/can/can.h
        Sources/can/can_msg_handle.c
        Sources/can/can_msg_handle.h
        Sources/font/show_string.c
        Sources/font/show_string.h
        Sources/font/show_zh_24x24.c
        Sources/font/show_zh_24x24.h
        Sources/font/zh_24x24.c
        Sources/font/zh_font.c
        Sources/font/zh_font.h
        Sources/gui/air_page.c
        Sources/gui/air_page.h
        Sources/gui/auxiliary_page.c
        Sources/gui/auxiliary_page.h
        Sources/gui/batteryManager_page.c
        Sources/gui/batteryManager_page.h
        Sources/gui/control_page.c
        Sources/gui/control_page.h
        Sources/gui/debug_page.c
        Sources/gui/debug_page.h
        Sources/gui/gui.c
        Sources/gui/gui.h
        Sources/gui/ILI9481.c
        Sources/gui/ILI9481.h
        Sources/gui/main_page.c
        Sources/gui/main_page.h
        Sources/gui/menu_page.c
        Sources/gui/menu_page.h
        Sources/gui/show.c
        Sources/gui/show.h
        Sources/gui/warning.c
        Sources/gui/warning.h
        Sources/User/bmp.c
        Sources/User/bmp.h
        Sources/User/chinese.h
        Sources/User/config.h
        Sources/User/delay.c
        Sources/User/delay.h
        Sources/User/fault.c
        Sources/User/fault.h
        Sources/User/font16x8.h
        Sources/User/GB1616.h
        Sources/User/global.c
        Sources/User/global.h
        Sources/User/key.c
        Sources/User/key.h
        Sources/User/SPI25LC1024.c
        Sources/User/SPI25LC1024.h
        Sources/User/str.c
        Sources/User/str.h
        Sources/User/systermf.c
        Sources/User/systermf.h
        Sources/User/typedef.h
        Sources/datapage.c
        Sources/derivative.h
        Sources/fault_page.c
        Sources/fault_page.h
        Sources/include.h
        Sources/main.c
        Sources/main.h
        Sources/MCUinit.c
        Sources/MCUinit.h
        Sources/panel.c
        Sources/panel.h
        Sources/Start12.c
        Sources/stepper.c
        Sources/stepper.h)

add_executable(bingo ${SOURCE_FILES})